--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
         <item>Elliptical</item>
     </string-array>
     <string name="ChangeInfo"><u>Change Information</u></string>
+    <string name="title_activity_maps">MapsActivity</string>
 </resources>
