--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,8 @@
     </string-array>
     <string name="ChangeInfo"><u>Change Information</u></string>
     <string name="title_activity_maps">MapsActivity</string>
+    <string-array name="GenderSelection">
+        <item>Male</item>
+        <item>Female</item>
+    </string-array>
 </resources>
