--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
         <item>Female</item>
     </string-array>
     <string name="welcome">Thank you for using TechSupport\'s Runnning Instructor, <u>Scamper</u> \nTry Swiping Left and Right</string>
+    <string name="weeklyInfo"><b>This Week\'s Statistics</b></string>
 </resources>
